// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ParticipantPassport /> getRestProps should match snapshot 1`] = `
<div>
  <Component />
</div>
`;

exports[`<ParticipantPassport /> renderItem should match snapshot if there is id 1`] = `
<div>
  <WithStyles(GridItem)>
    <ConnectFunction
      variant="withPassport"
    />
  </WithStyles(GridItem)>
</div>
`;

exports[`<ParticipantPassport /> renderItem should return null if there is no id 1`] = `
<div>
  <WithStyles(GridItem)>
    <ConnectFunction />
  </WithStyles(GridItem)>
</div>
`;
